# MES

./: .gitignore  .gitmodules  CMakeLists.txt  Eucleak.md  Mirai.md  README-SUIT-BASICS.md  README-SUIT-DEMO.md  README-SUIT.md  README.md  README_PKCS.md
BuildSystem/: BuildSignReq.conf  Makefile  README.md  signAndDeliver.sh
BuildSystem/FWUpdate/: Makefile  generator.sh
BuildSystem/SigningTool/: Makefile
BuildSystem/SigningTool/src/: P11Wrapper.h  config.h  main.cpp
Client/: Makefile
Client/src/: main.c
Doc/: chapter1_ProjectDescription.tex  chapter2_IOTSecurity.tex  chapter3_KeyManagement.tex  chapter4_FirmwareManagement.tex  chapter5_STRIDE.tex  start.tex  title.tex
Doc/images/: DataEncoding.drawio  FOTA_System.drawio  Overview.drawio  SUIT-MES.drawio  Transport.drawio
FWManager/: CMakeLists.txt  Makefile
FWManager/FWUpdateIn/: update.tgz
FWManager/FWUpdateIn/examples/: manifest.mf
FWManager/src/: CertificateHandler.cpp  CertificateHandler.h  main.cpp
FWManager/suit/: Makefile  README.md  encrypt_firmware.py  gen_manifest.py
FWManager/suit/manifests/cert/: generate_key_file.py
FWManager/suit/suit-manifest-generator/suit_tool/: compile.py  manifest.py
FWManager/test/: CertificateHandlerTest.cpp
FWManager/test/data/: Build_Cert.pem  CA_Cert.pem  testfile.txt.sig2
FWMgmnt/: CMakeLists.txt
FWMgmnt/src/: main.c
KeyMgmnt/: CMakeLists.txt
KeyMgmnt/src/: main.c
Libraries/DemoLib/: CMakeLists.txt
Libraries/DemoLib/include/: Demo.h
Libraries/DemoLib/src/: Demo.cpp
Libraries/DemoLib/test/: DemoTest.cpp
